// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionItemHeader should render the component 1`] = `
<AccordionItemHeader__AccordionItemHeaderStyled
  onClick={[Function]}
>
  <Heading
    as="h3"
    bold={false}
    className="AccordionItemHeader__title"
    noMargin={false}
  >
    <p>
      Some children
    </p>
  </Heading>
  <div
    className="AccordionItemHeader__icon"
  >
    <ChevronDown
      height="8"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</AccordionItemHeader__AccordionItemHeaderStyled>
`;

exports[`AccordionItemHeader should render the component opened 1`] = `
<AccordionItemHeader__AccordionItemHeaderStyled
  onClick={[Function]}
>
  <Heading
    as="h3"
    bold={false}
    className="AccordionItemHeader__title"
    noMargin={false}
  >
    <p>
      Some children
    </p>
  </Heading>
  <div
    className="AccordionItemHeader__icon"
  >
    <ChevronUp
      height="8"
      viewBox="0 0 14 8"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
</AccordionItemHeader__AccordionItemHeaderStyled>
`;
